update new -product

--- a/amigurumi-app/src/app/product/new-product/new-product.component.html
+++ b/amigurumi-app/src/app/product/new-product/new-product.component.html
@@ -55,6 +55,7 @@
                                         Description is required!
                                     </div>
                                 </ng-container>
+                                
                                 <!-- Photo -->
                                 <div class="col-md-12">
                                     <label for="exampleInputPassword3" class="form-label">Photo</label>
@@ -178,8 +179,7 @@
                                
                                     <!-- Show the default image if imageUrl is not available -->
                                     <div class="square position-relative display-2 mb-3" *ngIf="!imageUrl">
-                                        <i
-                                            class="fas fa-regular fa-image position-absolute top-50 start-50 translate-middle text-secondary"></i>
+                                        <i class="fas fa-regular fa-image position-absolute top-50 start-50 translate-middle text-secondary"></i>
                                     </div>
                                    
                                 </div>
