--- a/amigurumi-app/src/app/product/edit-product/edit-product.component.html
+++ b/amigurumi-app/src/app/product/edit-product/edit-product.component.html
@@ -4,21 +4,21 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <!-- Page title -->
+          
             <div class="my-5">
                 <h3>Edit Amigurumi</h3>
                 <hr>
             </div>
-            <!-- Form START -->
-          
 
+            <!-- Form START -->
             <form class="file-upload" #form="ngForm" (ngSubmit)="submitHandler(form)">
                 <div class="row mb-5 gx-5">
-                    <!-- change password -->
+                
                     <div class="col-xxl-6">
                         <div class="bg-secondary-soft px-4 py-5 rounded">
                             <div class="row g-3">
                                 <h4 class="my-4">Details:</h4>
+
                                 <!-- Title -->
                                 <div class="col-md-12">
                                     <label for="exampleInputPassword1" class="form-label">Title</label>
@@ -55,13 +55,13 @@
                                         Description is required!
                                     </div>
                                 </ng-container>
+
                                 <!-- Photo -->
                                 <div class="col-md-12">
                                     <label for="exampleInputPassword3" class="form-label">Photo</label>
                                     <input type="text" class="form-control" id="exampleInputPassword3"
                                     name="imageUrl" [(ngModel)]="product.imageUrl" required
-                                        minlength="4" #photoInput="ngModel"
-                                    >
+                                        minlength="4" #photoInput="ngModel">
                                 </div>
                                 <!-- error msg-titleInput-->
                                 <ng-container *ngIf="photoInput.touched">
@@ -126,41 +126,11 @@
                                         </label>
                                     </div>
                                 </div>
-                                <!-- Example single danger button -->
-                                <!-- <div class="btn-group col-md-6">
-                                    <button type="button" class="btn btn-primary dropdown-toggle"
-                                        data-toggle="dropdown">
-                                        Skill Level
-                                    </button>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#">Action</a></li>
-                                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-
-                                    </ul>
-                                </div>
-                                <div class="dropdown">
-                                    <button class="btn btn-secondary dropdown-toggle" type="button"
-                                        data-bs-toggle="dropdown" aria-expanded="false">
-                                        Category
-                                    </button>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#">Animals</a></li>
-
-                                        <li><a class="dropdown-item" href="#">Doll</a></li>
-                                        <li><a class="dropdown-item" href="#">Baby</a></li>
-                                        <li><a class="dropdown-item" href="#">Bear</a></li>
-
-                                        <li><a class="dropdown-item" href="#">Bunnies</a></li>
-                                        <li><a class="dropdown-item" href="#">Caterpillar</a></li>
-
-
-                                    </ul>
-                                </div> -->
-
+                          
                             </div>
                         </div>
                     </div>
+
                     <!-- Upload profile -->
                     <div class="col-xxl-4">
                         <div class="bg-secondary-soft px-4 py-5 rounded">
@@ -168,10 +138,18 @@
                                 <h4 class="mb-4 mt-0">Upload amigurumi photo</h4>
                                 <div class="text-center">
 
-                                    <input type="text" class="form-control" id="exampleInputPassword3"
-                                    name="imageUrl" [(ngModel)]="product.imageUrl" required
-                                    minlength="4" #photoInput="ngModel">
-                                 
+                
+                                    <div class="image-container"*ngIf="product.imageUrl">
+                                        <img [src]="product.imageUrl" class="card-img-top" alt="product image">
+                                    </div>
+                               
+                                    <!-- Show the default image if imageUrl is not available -->
+                                    <div class="square position-relative display-2 mb-3" *ngIf="!product.imageUrl">
+                                        <i
+                                            class="fas fa-regular fa-image position-absolute top-50 start-50 translate-middle text-secondary"></i>
+                                    </div>
+
+
                                 </div>
                             </div>
                         </div>
@@ -179,9 +157,8 @@
 
                 </div> <!-- Row END -->
                 {{form.value |json}}
-                <!-- button -->
-          
 
+                <!-- button -->
                 <div class="d-flex flex-row gap-2 mb-3">
                     <button type="submit" class="btn btn-outline-dark">
                         <a [routerLink]="['../../']" class=" custom-btn">Back</a></button>
@@ -191,10 +168,7 @@
                   
                 </div>
 
-
-            </form> <!-- Form END -->
-         
-           
+            </form> 
         </div>
     </div>
 </div>
