--- a/amigurumi-app/src/app/product/details-product/details-product.component.css
+++ b/amigurumi-app/src/app/product/details-product/details-product.component.css
@@ -51,7 +51,7 @@ li {
     padding-top: 20px;
     padding-bottom: 20px;
     transition: all 0.2s linear;
-    text-align: center;
+    text-align:start;
     margin: 20px auto;
     /* background: #5758BB; */
     background-color: rgba(240, 240, 240, 0.8)
@@ -104,7 +104,7 @@ h3 {
 .desc {
     padding: 10px;
     font-style: italic;
-    text-align: center;
+    text-align:start;
 
     opacity: 0.7;
     color: rgb(23, 22, 22);
