--- a/amigurumi-app/src/app/user/profile/profile.component.html
+++ b/amigurumi-app/src/app/user/profile/profile.component.html
@@ -9,7 +9,6 @@
       </div>
       <div class="col-md-4 mb-3 ">
 
-
         <!-- READ ONLY MODE -->
         <ng-container *ngIf="!isEditMode">
           <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
@@ -26,12 +25,10 @@
 
 
                 <div class="mt-3 ">
-                  <!-- <h4>{{fullName}}'s profile</h4> -->
                   <h4>{{ fullName }}'s profile</h4>
-                  <!-- <h4>{{ profileDetails.fullName }}'s profile</h4> -->
-                  <!-- <p class="text-secondary mb-1 custom-p"><i class="fa-regular fa-envelope"></i> Email: {{email}}</p> -->
-                  <p class="text-secondary mb-1 custom-p"><i class="fa-regular fa-envelope"></i> Email: {{
-                    email }}</p>
+
+                  <p class="text-secondary mb-1 custom-p"><i class="fa-regular fa-envelope"></i>
+                     Email: {{email }}</p>
 
                   <!-- <p class="text-secondary mb-1 custom-p"><i class="fa-solid fa-venus-mars"></i> Gender: {{gender}}</p> -->
                   <!-- <p class="text-secondary mb-1 custom-p"><i class="fa-solid fa-venus-mars"></i> 
@@ -47,16 +44,20 @@
 
         <!-- EDIT MODE -->
         <ng-container *ngIf="isEditMode">
-          <form #form="ngForm">
+          <form  #form="ngForm">
             <!-- <form class="card-form" #loginForm="ngForm" class="card-form" (ngSubmit)="submitHandler(loginForm)"></form> -->
             <div class="card mt-3 shadow p-3 mb-5 bg-body-tertiary rounded">
 
               <div class="d-flex flex-column align-items-center text-center ">
                 <h3>User Info:</h3>
-                <img *ngIf="isMale" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
+
+                <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
+                class="rounded-circle p-1 bg-primary" width="180">
+
+                <!-- <img *ngIf="isMale" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
                   class="rounded-circle p-1 bg-primary" width="180">
                 <img *ngIf="!isMale" src="https://bootdey.com/img/Content/avatar/avatar8.png" alt="Admin"
-                  class="rounded-circle p-1 bg-primary" width="180">
+                  class="rounded-circle p-1 bg-primary" width="180"> -->
               </div>
 
               <h5 class=" align-items-center text-center ">{{fullName}}'s profile</h5>
@@ -65,8 +66,8 @@
 
                 <div class="input-group mb-3">
                   <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-user-large"></i> </span>
-                  <input type="text" class="form-control" name="fullName" id="fullName" value="{{fullName}}" required
-                    ngModel #fullNameInput="ngModel" minlength="4">
+                  <input type="text" class="form-control" name="fullName" id="fullName"  [(ngModel)]="user.fullName"  required
+                     #fullNameInput="ngModel" minlength="4">
 
                 </div>
                 <!--fullName error msg-->
@@ -83,16 +84,16 @@
                   </div>
                 </ng-container>
 
-                <div class="input-group mb-3">
+                <!-- <div class="input-group mb-3">
                   <span class="input-group-text" id="basic-addon1"><i class="fa-regular fa-envelope"></i> </span>
-                  <!-- <span class="input-group-text" id="basic-addon1">@</span> -->
-                  <input type="text" class="form-control" name="email" id="email" value="{{email}}" ngModel email
+       
+                  <input type="text" class="form-control" name="email" id="email" [(ngModel)]="user.email" email
                     required #emailInput="ngModel">
 
-                </div>
+                </div> -->
 
                 <!--email error msg-->
-                <ng-container *ngIf="emailInput.touched">
+                <!-- <ng-container *ngIf="emailInput.touched">
                   <div class="error" *ngIf="emailInput.errors?.['required']">
 
                     Email is required!
@@ -101,43 +102,9 @@
                   <div class="error" *ngIf="emailInput.errors?.['email']">Invalid Email!
                     {{emailInput.errors?.['email'].requiredLength}} ...
                   </div>
-                </ng-container>
+                </ng-container> -->
 
-                <!-- <div class="input-group mb-3">
-                  <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-venus-mars"></i> </span>
-                  <input type="text" class="form-control" name="gender" id="gender" value="{{gender}}"
-                    aria-label="Username" aria-describedby="basic-addon1">
-
-                </div> -->
-                <div class="genderRadio d-flex justify-content-evenly">
-                  <div class="form-check">
-                    <input class="form-check-input" type="radio" name="gender" id="male" value="male"
-                      [(ngModel)]="user.gender">
-                    <label class="form-check-label" for="male">
-                      Male
-                    </label>
-                  </div>
-
-                  <div class="form-check">
-                    <input class="form-check-input" type="radio" name="gender" id="female" value="female"
-                      [(ngModel)]="user.gender">
-                    <label class="form-check-label" for="female">
-                      Female
-                    </label>
-                  </div>
-                </div>
-                <!-- <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                    <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter mr-2 icon-inline text-info"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>Twitter</h6>
-                    <span class="text-secondary">@bootdey</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                    <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram mr-2 icon-inline text-danger"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>Instagram</h6>
-                    <span class="text-secondary">bootdey</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                    <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook mr-2 icon-inline text-primary"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg>Facebook</h6>
-                    <span class="text-secondary">bootdey</span>
-                  </li> -->
+              
               </ul>
               <div class="row">
                 <div class="d-flex justify-content-evenly">
@@ -166,21 +133,21 @@
             <div class="lds-dual-ring">
 
               <app-loader></app-loader>
+              
             </div>
           </div>
-          
+
           <div class="row pt-5 mt-30" *ngIf="!isLoalding">
             <div class="col-lg-6 col-sm-6 mb-30 pb-5  ">
               <a class="card" href="#">
                 <div class="box-shadow bg-white rounded-circle mx-auto text-center"
                   style="width: 90px; height: 90px; margin-top: -45px;"><i
                     class="fa-solid fa-list-check fa-3x head-icon" style="color: blue;"></i></div>
+
                 <div class="card-body text-center">
                   <h3 class="card-title pt-1">My Products</h3>
-                  <p class="card-text text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation ullamco laboris nisi ut aliquip.</p><span
-                    class="text-sm text-uppercase font-weight-bold">Learn More&nbsp;<i
+
+                  <span class="text-sm text-uppercase font-weight-bold">Learn More&nbsp;<i
                       class="fe-icon-arrow-right"></i></span>
 
                   <!--IS have a products-->
@@ -208,15 +175,10 @@
                     class="fa-regular fa-thumbs-up fa-3x head-icon" style="color: blue;"></i></div>
                 <div class="card-body text-center">
                   <h3 class="card-title pt-1">Liked Products</h3>
-                  <p class="card-text text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation ullamco laboris nisi ut aliquip.</p><span
-                    class="text-sm text-uppercase font-weight-bold">Learn More&nbsp;<i
+                  <span class="text-sm text-uppercase font-weight-bold">Learn More&nbsp;<i
                       class="fe-icon-arrow-right"></i></span>
 
-                 
 
-                
                   <!--IS have a liked products-->
                   <div class="list-group" *ngIf="likedProducts.length > 0">
 
@@ -230,15 +192,37 @@
                     <p>No slecked products from this user!</p>
                   </div>
 
-
                 </div>
               </a>
             </div>
           </div>
         </section>
-
       </div>
     </div>
-
   </div>
 </div>
+
+
+<!-- <div class="input-group mb-3">
+  <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-venus-mars"></i> </span>
+  <input type="text" class="form-control" name="gender" id="gender" value="{{gender}}"
+    aria-label="Username" aria-describedby="basic-addon1">
+
+</div>
+<div class="genderRadio d-flex justify-content-evenly">
+  <div class="form-check">
+    <input class="form-check-input" type="radio" name="gender" id="male" value="male"
+      [(ngModel)]="user.gender">
+    <label class="form-check-label" for="male">
+      Male
+    </label>
+  </div>
+
+  <div class="form-check">
+    <input class="form-check-input" type="radio" name="gender" id="female" value="female"
+      [(ngModel)]="user.gender">
+    <label class="form-check-label" for="female">
+      Female
+    </label>
+  </div>
+</div> -->
