update details component

--- a/amigurumi-app/src/app/product/details-product/details-product.component.html
+++ b/amigurumi-app/src/app/product/details-product/details-product.component.html
@@ -64,7 +64,9 @@
                                 <span class="material-symbols-outlined">
                                     thumb_up
                                 </span>
-                                <span>{{likeButtonTitle}}</span>
+                                <span>{{likeButtonTitle}}
+                                    
+                                </span>
 
                             </button>
                      
