update header and footer

--- a/amigurumi-app/src/app/core/footer/footer.component.html
+++ b/amigurumi-app/src/app/core/footer/footer.component.html
@@ -19,7 +19,7 @@
     <ul>
 
         <li><a routerLink="">Home</a></li>
-        <li><a routerLink="products">Catalog</a></li>
+        <li><a routerLink="/catalog/products">Catalog</a></li>
         <li><a routerLink="">Contact us</a></li>
 
     </ul>
