--- a/amigurumi-app/src/app/product/details-product/details-product.component.html
+++ b/amigurumi-app/src/app/product/details-product/details-product.component.html
@@ -41,12 +41,12 @@
                     <div class="skills-category">
                         <div class="prd-skillLevel">
 
-                            <i class="fa-brands fa-galactic-republic custom-icon"></i> Category: {{product?.category}}
+                            <i class="fa-brands fa-galactic-republic custom-icon"></i> <b>Category:</b> {{product?.category}}
 
                         </div>
                         <div class="prd-skillLevel">
 
-                            <i class="fa-solid fa-star custom-icon"></i> Skill Level: {{product?.skillLevel}}
+                            <i class="fa-solid fa-star custom-icon"></i> <b>Skill Level:</b> {{product?.skillLevel}}
 
                         </div>
                     </div>
@@ -116,7 +116,7 @@
                         </div>
 
 
-                        <a [routerLink]="['/products/edit', product?.id]" *ngIf="isOwnerStatus"
+                        <a [routerLink]="['/catalog/products/edit', product?.id]" *ngIf="isOwnerStatus"
                             class=" btn btn-outline-primary btn-sm">
                             <span class="material-symbols-outlined">
                                 edit
