--- a/amigurumi-app/src/app/product/edit-product/edit-product.component.css
+++ b/amigurumi-app/src/app/product/edit-product/edit-product.component.css
@@ -10,13 +10,6 @@ body {
 
 }
 
-/* .containerEdit {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    min-height: 100vh;
-} */
 
 .rounded {
     border-radius: 5px !important;
@@ -87,11 +80,11 @@ body {
     background-color: transparent;
     border-color: transparent;
     color: black;
-    text-decoration: none; /* Премахва подчертаването на връзката */
-    padding: 0; /* Премахва вътрешният padding на бутона, за да няма излишни отстъпи около текста */
+    text-decoration: none; 
+    padding: 0; 
   }
   
-  /* Стилове при ховер */
+ 
   .custom-btn:hover {
     color: white;
   }
