--- a/amigurumi-app/src/app/user/register/register.component.css
+++ b/amigurumi-app/src/app/user/register/register.component.css
@@ -18,8 +18,6 @@ img {
 	display: block;
 }
 
-
-
 .card {
 	margin: 2rem auto;
 	display: flex;
@@ -53,7 +51,7 @@ img {
 	color: #735400;
 	line-height: 1.222;
 
-	small {
+	:is(small){
 		display: block;
 		font-size: .75em;
 		font-weight: 400;
@@ -129,7 +127,7 @@ img {
 	font-size: .875rem;
 	color: #8597a3;
 
-	a {
+	:is(a){
 		display: block;
 		color: #6658d3;
 		text-decoration: none;
