update home, new -product and not found  css

--- a/amigurumi-app/src/app/not-found/not-found.component.css
+++ b/amigurumi-app/src/app/not-found/not-found.component.css
@@ -1,60 +1,12 @@
-/* .page_404 {
 
-
-  padding: 40px 0;
-  background: #fff;
- 
-}
-
-.page_404 img {
-  width: 100%;
-}
-
-.four_zero_four_bg {
-
-  background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
-  height: 400px;
-  background-position: center;
-}
-
-
-.four_zero_four_bg h1 {
-  font-size: 80px;
-}
-
-.four_zero_four_bg h3 {
-  font-size: 80px;
-}
-
-.link_404 {
-  color: #fff !important;
-  padding: 10px 20px;
-  background: rgb(87, 88, 187);
-  margin: 20px 0;
-  display: inline-block;
-}
-
-.contant_box_404 {
-  margin-top: -50px;
-} */
-
-/* .clearfix:before,
-.clearfix:after {
-    display: table;
-
-    content: ' ';
-}
-.clearfix:after {
-    clear: both;
-} */
 body {
     background: #f0f0f0 !important;
 }
 .page-404 {
-  height: 70vh; /* Set the height of the container to the full viewport height */
-  display: flex; /* Use flexbox */
-  justify-content: center; /* Center the content horizontally */
-  align-items: center; /* Center the content vertically */
+  height: 70vh; 
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
 }
 .page-404 .outer {
     position: absolute;
