--- a/amigurumi-app/src/app/product/new-product/new-product.component.css
+++ b/amigurumi-app/src/app/product/new-product/new-product.component.css
@@ -69,8 +69,8 @@ body{margin-top:20px;
         background-color: transparent;
         border-color: transparent;
         color: black;
-        text-decoration: none; /* Премахва подчертаването на връзката */
-        padding: 0; /* Премахва вътрешният padding на бутона, за да няма излишни отстъпи около текста */
+        text-decoration: none; 
+        padding: 0; 
       }
       
       /* Стилове при ховер */
