--- a/amigurumi-app/src/app/product/details-product/details-product.component.css
+++ b/amigurumi-app/src/app/product/details-product/details-product.component.css
@@ -229,5 +229,6 @@ hr {
     /* height: 100vh;  */
   }
   .container {
-    padding-bottom: 6rem;
+    padding-bottom: 10rem;
+    /* padding-top: 6rem; */
 }
