--- a/amigurumi-app/src/app/home/home.component.css
+++ b/amigurumi-app/src/app/home/home.component.css
@@ -1,18 +1,51 @@
 
-.container{
-    flex: 1;
-    padding-bottom: 50px;
-    min-height: 66.5vh;
+@media (max-width: 1482px) {
+    .welcome-info h1 {
+        font-size: 29px;
+    }
+
+    
+
+    .container {
+        margin-bottom: 100px;
+    }
+}
+@media (max-width: 551px) {
+    .welcome-info h1 {
+        font-size: 22px;
+    }
+
+    .container {
+        margin-bottom: 600px;
+
+    }
+
+  
+}
+@media (max-width: 480px) {
+  
+    .container {
+        margin: 0;
+        flex: 1 1;
+    }
+}
+.container {
+    flex: 1 ;
+
+    width: 100vh;
     /* opacity: 1;
     color: rgba(237, 240, 244, 0.2) !important; */
 }
-.row{
-  margin-top: 50px;
-    width: 70%;
-    background-color: rgba(246, 246, 246, 0.8) !important;
-
-    margin-left: auto;
+.main-body {
+    padding: 150px;
 }
+.row-info {
+    margin-top: 150px;
+    /* width: 90%; */
+    background-color: rgba(246, 246, 246, 0.8) !important;
+    /* margin-left: auto; */
+}
+
 .divImage {
     width: 100%;
     height: 0;
@@ -23,21 +56,13 @@
     background-position: center;
 }
 
-.carousel-item {
-    height: 400px;
-  
-}
 
-.carouselExampleCaptions {
-    /* background-color: rgba(60, 63, 190, 0.8) !important; */
-    background-color: rgba(152, 160, 237, 0.8) !important;
-
-
-}
-.welcome-info{
+.welcome-info {
     display: flex;
     flex-direction: column;
-  
-    text-align:start;
-   
+    text-align: start;
+}
+h1{
+    text-align: center;
+    
 }
