--- a/amigurumi-app/src/app/user/profile/profile.component.html
+++ b/amigurumi-app/src/app/user/profile/profile.component.html
@@ -15,8 +15,8 @@
             <div class="card-body">
               <div class="d-flex flex-column align-items-center text-center">
 
-                <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
-                  class="rounded-circle p-1 bg-primary" width="180">
+                <img src="https://www.freeiconspng.com/thumbs/person-icon/icon-user-blue-symbol-people-person-generic--public-domain--21.png" alt="Admin"
+                  class="rounded-circle p-4  alert alert-primary"  width="180" >
 
                 <!-- <img *ngIf="isMale" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
                   class="rounded-circle p-1 bg-primary" width="180">
@@ -51,8 +51,9 @@
               <div class="d-flex flex-column align-items-center text-center ">
                 <h3>User Info:</h3>
 
-                <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
-                class="rounded-circle p-1 bg-primary" width="180">
+                <!-- <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" -->
+                <img src="https://www.freeiconspng.com/thumbs/person-icon/icon-user-blue-symbol-people-person-generic--public-domain--21.png" alt="Admin"
+                class="rounded-circle p-6  alert alert-primary"  width="180">
 
                 <!-- <img *ngIf="isMale" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
                   class="rounded-circle p-1 bg-primary" width="180">
@@ -142,7 +143,7 @@
               <a class="card" href="#">
                 <div class="box-shadow bg-white rounded-circle mx-auto text-center"
                   style="width: 90px; height: 90px; margin-top: -45px;"><i
-                    class="fa-solid fa-list-check fa-3x head-icon" style="color: blue;"></i></div>
+                    class="fa-solid fa-list-check fa-3x head-icon" ></i></div>
 
                 <div class="card-body text-center">
                   <h3 class="card-title pt-1">My Products</h3>
@@ -172,7 +173,7 @@
               <a class="card" href="#">
                 <div class="box-shadow bg-white rounded-circle mx-auto text-center"
                   style="width: 90px; height: 90px; margin-top: -45px;"> <i
-                    class="fa-regular fa-thumbs-up fa-3x head-icon" style="color: blue;"></i></div>
+                    class="fa-regular fa-thumbs-up fa-3x head-icon" ></i></div>
                 <div class="card-body text-center">
                   <h3 class="card-title pt-1">Liked Products</h3>
                   <span class="text-sm text-uppercase font-weight-bold">Learn More&nbsp;<i
