--- a/amigurumi-app/src/app/user/register/register.component.html
+++ b/amigurumi-app/src/app/user/register/register.component.html
@@ -1,12 +1,9 @@
 
-<p class="notification error-message" *ngIf="errorMsg">
-    {{errorMsg}}
-    <!-- {{apiError$ | async |json}} -->
-</p>
-<p class="notification success-message" *ngIf="successMsg">
-    {{successMsg}}
-    <!-- {{apiError$ | async |json}} -->
-</p>
+
+<!-- <div *ngIf="errorMsg">
+
+	<app-error></app-error>
+</div> -->
 
 <div class="container">
 
@@ -114,4 +111,14 @@
 		</div>
 	</div>
 </div>
-{{registerForm.value |json}}
+<!-- {{registerForm.value |json}} -->
+
+
+<!-- <p class="notification error-message" *ngIf="errorMsg">
+    {{errorMsg}}
+    {{apiError$ | async |json}}
+</p>
+<p class="notification success-message" *ngIf="successMsg">
+    {{successMsg}}
+    {{apiError$ | async |json}}
+</p> -->
