--- a/amigurumi-app/src/app/user/login/login.component.css
+++ b/amigurumi-app/src/app/user/login/login.component.css
@@ -144,5 +144,27 @@ input.ng-invalid.ng-touched {
     border-radius: 3px;
     font-style: italic;
 }
+.notification{
+    position: fixed;
+    z-index: 10;
+    right: 10%;
+    top:15%;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    color: rgb(255, 255, 255);
+    font-style: italic;
+    text-decoration: underline;
+    box-shadow: 0 5px 10px rgb(204, 204, 204);
+    background-color: rgba(238, 74, 74, 0.699);
+   }
+   .error-message {
+    background-color: rgba(238, 74, 74, 0.699);
+   }
+   .success-message {
+    background-color: rgba(99, 230, 81, 0.699);
+   }
 
-
+.container {
+    padding-bottom: 10rem;
+    /* padding-top: 6rem; */
+}
