--- a/amigurumi-app/src/app/user/login/login.component.html
+++ b/amigurumi-app/src/app/user/login/login.component.html
@@ -1,4 +1,5 @@
 
+
 <div class="container">
 
 	<div class="card">
@@ -61,4 +62,4 @@
 		</div>
 	</div>
 </div>
-{{loginForm.value |json}}
+<!-- {{loginForm.value |json}} -->
