--- a/amigurumi-app/src/app/product/new-product/new-product.component.html
+++ b/amigurumi-app/src/app/product/new-product/new-product.component.html
@@ -189,11 +189,11 @@
 
 
                 </div> <!-- Row END -->
-                {{form.value |json}}
+                <!-- {{form.value |json}} -->
                 <!-- button -->
                 <div class="d-flex flex-row gap-2 mb-3">
                     <button type="submit" class="btn btn-outline-dark">
-                        <a [routerLink]="['../']" class=" custom-btn">Back</a></button>
+                        <a [routerLink]="['../../']" class=" custom-btn">Back</a></button>
 
                     <button type="submit" class="btn btn-primary btn-lg" [disabled]="form.invalid"
                         [style]="{backgroundColor:form.invalid ? '#e25562':' #6658d3'}">Add new Amigurumi</button>
