--- a/amigurumi-app/src/app/core/error/error.component.css
+++ b/amigurumi-app/src/app/core/error/error.component.css
@@ -5,11 +5,12 @@
     top:15%;
     padding: 1rem;
     border-radius: 0.5rem;
-    color: rgb(255, 255, 255);
-    font-style: italic;
-    text-decoration: underline;
     box-shadow: 0 5px 10px rgb(204, 204, 204);
+    font-style: italic;
+    /* text-decoration: underline; */
+    /* box-shadow: 0 5px 10px rgb(204, 204, 204);
     background-color: rgba(238, 74, 74, 0.699);
+    color: rgb(255, 255, 255); */
    }
    .error-message {
     background-color: rgba(238, 74, 74, 0.699);
