--- a/amigurumi-app/src/app/core/footer/footer.component.css
+++ b/amigurumi-app/src/app/core/footer/footer.component.css
@@ -1,8 +1,7 @@
 @media (max-width: 773px) {
- 
-   footer ul {
+
+    footer ul {
         padding: 0;
-      
         margin: 0;
         display: flex;
         flex-wrap: wrap;
@@ -12,13 +11,13 @@
 
 @media (max-width: 551px) {
     footer {
-        margin-top: 30px; 
+        margin-top: 30px;
     }
 
 }
 
 
-@media (max-width: 1620px) {
+@media (max-width: 1220px) {
     header {
         flex-direction: column;
         align-items: center;
@@ -44,26 +43,32 @@
 @media (max-width: 480px) {
     footer ul {
         display: flex;
-      flex-wrap: wrap;
-      flex-direction: column;
+        flex-wrap: wrap;
+        flex-direction: column;
         /* flex-direction: column; */
         /* padding-bottom:0; */
         justify-content: space-evenly;
-        padding:  0;  
+        padding: 0;
     }
+
     footer ul li {
         font-size: 14px;
     }
-   
+
 }
 
 
 footer {
 
-    position:absolute;
+    /* position:relative;
     bottom: 0;
     left: 0;
-    width: 100%;
+    width: 100%; */
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
     padding: 10px;
     display: none;
     background-color: rgb(87, 88, 187);
