--- a/amigurumi-app/src/app/core/header/header.component.css
+++ b/amigurumi-app/src/app/core/header/header.component.css
@@ -1,4 +1,6 @@
-@media (max-width: 1620px) {
+/* @import url('https://fonts.googleapis.com/css?family=Raleway:400,700%27'); */
+
+/* @media (max-width: 1620px) {
     header {
         flex-direction: column;
         align-items: center;
@@ -17,7 +19,7 @@
         font-size: 24px;
         color: white;
     }
-}
+} */
 
 @media (max-width: 768px) {
     header {
