--- a/amigurumi-app/src/app/home/home.component.css
+++ b/amigurumi-app/src/app/home/home.component.css
@@ -1,15 +1,15 @@
-
 @media (max-width: 1482px) {
     .welcome-info h1 {
         font-size: 29px;
     }
 
-    
+
 
     .container {
         margin-bottom: 100px;
     }
 }
+
 @media (max-width: 551px) {
     .welcome-info h1 {
         font-size: 22px;
@@ -20,41 +20,36 @@
 
     }
 
-  
+
 }
+
 @media (max-width: 480px) {
-  
+
     .container {
         margin: 0;
         flex: 1 1;
     }
 }
-.container {
-    flex: 1 ;
 
-    width: 100vh;
+.container {
+    flex: 1 1 ;
+    height: auto;
+    width: 100%;
     /* opacity: 1;
     color: rgba(237, 240, 244, 0.2) !important; */
 }
+
 .main-body {
     padding: 150px;
 }
+
 .row-info {
-    margin-top: 150px;
-    /* width: 90%; */
+    margin-top: 70px;
+    width: 60%;
     background-color: rgba(246, 246, 246, 0.8) !important;
-    /* margin-left: auto; */
+    margin-left: auto;
 }
 
-.divImage {
-    width: 100%;
-    height: 0;
-    padding-top: 56.25%;
-    background-size: 100% 100%;
-    /* Задава височина от 56.25% спрямо ширината, което съответства на 16:9 соотношение */
-    background-size: cover;
-    background-position: center;
-}
 
 
 .welcome-info {
@@ -62,7 +57,11 @@
     flex-direction: column;
     text-align: start;
 }
-h1{
+
+h1 {
     text-align: center;
-    
+
+}
+p{
+    padding:0.5em 2em;
 }
