--- a/amigurumi-app/src/app/home/home.component.html
+++ b/amigurumi-app/src/app/home/home.component.html
@@ -1,6 +1,5 @@
-<h1>Welcome to Amigurumi</h1>
-<hr>
-<!-- <div class="container">
+
+<div class="container">
  
     <div class="row-info">
 
@@ -18,4 +17,4 @@
 
     </div>
 
-</div> -->
+</div>
